; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_renderer_button.c_custom_cell_renderer_button_activate.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_renderer_button.c_custom_cell_renderer_button_activate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [41 x i8] c"custom_cell_renderer_button_activate ()\0A\00", align 1
@button_cell_signals = common dso_local global i32* null, align 8
@CLICKED = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*, i32*, i32*, i32*, i32)* @custom_cell_renderer_button_activate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @custom_cell_renderer_button_activate(i32* %0, i32* %1, i32* %2, i32* %3, i32* %4, i32* %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32* %2, i32** %10, align 8
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  store i32 %6, i32* %14, align 4
  %15 = call i32 @g_debug(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  %16 = load i32*, i32** %8, align 8
  %17 = load i32*, i32** @button_cell_signals, align 8
  %18 = load i64, i64* @CLICKED, align 8
  %19 = getelementptr inbounds i32, i32* %17, i64 %18
  %20 = load i32, i32* %19, align 4
  %21 = load i32*, i32** %11, align 8
  %22 = call i32 @g_signal_emit(i32* %16, i32 %20, i32 0, i32* %21)
  %23 = load i32, i32* @TRUE, align 4
  ret i32 %23
}

declare dso_local i32 @g_debug(i8*) #1

declare dso_local i32 @g_signal_emit(i32*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
